<resources>
    <string name="app_name">Liber</string>
    <string name="title_eBook">E-Liber</string>
    <string name="title_sell">Selling</string>
    <string name="title_buy">Shopping</string>
    <string name="title_profile">Profile</string>
    <string name="male">Male</string>
    <string name="your_name">Your Name</string>
    <string name="college_name">College Name</string>
    <string name="female">Female</string>
    <string name="your_address">Your Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="edit_mobile_number">Edit Mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string-array name="item_category">
        <item>Select Category</item>
        <item>Used Books, Fressh Books and Reference Books</item>
        <item>Educational Instruments and other stuff</item>
    </string-array>
    <string-array name="course_array">
        <item>Select Course</item>
        <item>Civil Services</item>
        <item>Engineering</item>
        <item>Pharmacy</item>
        <item>Polytechnic</item>
        <item>Medical</item>
    </string-array>
    <string-array name="no_of_sub">
        <item>Select No of Books</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
